<resources>
    <string name="app_name">tugas_rancang</string>

    <!-- Tour List Placeholders -->
    <string name="tour_row_name_placeholder">Tour Name Here</string>
    <string name="tour_row_desc_placeholder">Tour Description of current tour name here</string>

    <!-- Trip List Placeholders -->
    <string name="trip_row_name_placeholder">Trip Name Here</string>
    <string name="trip_row_desc_placeholder">Trip Description of current trip name here</string>

    <!-- Budget List Placeholder -->
    <string name="budget_row_name_placeholder">Budget Name</string>
    <string name="budget_row_separator">&#160;|&#160;</string>
    <string name="budget_row_amount_placeholder">Rp 2 000 000,-</string>

    <!-- tags -->
    <string name="tags_accomodation">Accomodation</string>
    <string name="tags_transportation">Transportation</string>
    <string name="tags_destination">️️Destination</string>
    <string name="tags_activity">Activity‍️️</string>
    <string name="tags_souvenir">Souvenir</string>
    <string name="tags_consumption">Consumption</string>
    <string name="tags_expected">Expected Extra</string>
    <string name="tags_unexpected">Unexpected Extra</string>
    <string name="tags_default">Untagged</string>

    <!-- Layouts -->
    <!-- Tour Management Layout -->
    <string name="tour_add_button">New Tour</string>

    <!-- Trip Management Layout -->
    <string name="trip_add_button">New Trip</string>

    <!-- Budget Management Layout -->
    <string name="budget_add_button">Plan Your Budget</string>

    <!-- Tour Add Layout -->
    <string name="tour_add_tour_name">Name of Your Tour</string>
    <string name="tour_add_tour_desc">Additional Descriptions</string>
    <string name="tour_add_add_tour_btn">Add Tour</string>

    <!-- Trip Add Layout -->
    <string name="trip_add_trip_name">Name your trip</string>
    <string name="trip_add_trip_desc">Describe your Trip</string>
    <string name="trip_add_add_trip_btn">Add Trip</string>

    <!-- Budget Add Budget -->
    <string name="budget_add_budget_name">Name Your Budget</string>
    <string name="budget_add_budget_description">Describe Your Budget</string>
    <string name="budget_add_budget_amount">How Much Will You Spend ?</string>
    <string name="budget_add_budget_choose">What Kind of Budget Is This ?</string>
    <string name="budget_add_add_budget_btn">Confirm Budget</string>
</resources>
